--- a/index.html
+++ b/index.html
@@ -193,11 +193,11 @@
     <div class="modal" id="subscriptionModal">
         <div class="modal-content">
             <h2>AVISO</h2>
-            <p>Procurando assinatura original? Precinho que cabe em seu bolso brasileiro.
-Temos tela, tv, conta, convite.
-“Tela tv ativação via código apenas para tv não envio e-mail e nem senha”
-“conta ideal para todos da família, amigo, colega, revender, etc. envio e-mail e senha”
-“convite eu envio para o seu e-mail particular ou qualquer um que você tenha se não estiver envio um” 
+            <p>Procurando assinatura original? Precinho que cabe em seu bolso.<br><br>
+Temos tela, tv, conta, convite.<br><br>
+“Tela tv ativação via código apenas para tv não envio e-mail e nem senha”<br><br>
+“conta ideal para todos da família, amigo, colega, revender, etc. envio e-mail e senha”<br><br>
+“convite eu envio para o seu e-mail particular ou qualquer um que você tenha se não estiver envio um”
 
 comprando mais de 5 assinatura tem descontão.</p>
             <button class="close-button" onclick="closeModal()">Fechar</button>
