--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 Temos tela, tv, conta, convite.<br><br>
 “Tela tv ativação via código apenas para tv não envio e-mail e nem senha”<br><br>
 “conta ideal para todos da família, amigo, colega, revender, etc. envio e-mail e senha”<br><br>
-“convite eu envio para o seu e-mail particular ou qualquer um que você tenha se não estiver envio um”
+“convite eu envio para o seu e-mail particular ou qualquer um que você tenha se não estiver envio um”<br><br>
 
 comprando mais de 5 assinatura tem descontão.</p>
             <button class="close-button" onclick="closeModal()">Fechar</button>
