--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
                 <!-- Substitua 'seu_numerodetelefone' pelo seu número de telefone -->
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play">Comprar Agora</a>
             </div>
         </div>
 
@@ -226,7 +226,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <div class="button-container">
                 <p class="price">R$ 15,00/mês</p>
                 <!-- Substitua 'seu_numerodetelefone' pelo seu número de telefone -->
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Telecine">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Telecine">Comprar Agora</a>
             </div>
         </div>
 
@@ -238,7 +238,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <div class="button-container">
                 <p class="price">R$ 20,00/mês</p>
                 <!-- Substitua 'seu_numerodetelefone' pelo seu número de telefone -->
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Canais%20%2B%20Telecine">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Canais%20%2B%20Telecine">Comprar Agora</a>
             </div>
         </div>
 
@@ -250,7 +250,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <div class="button-container">
                 <p class="price">R$ 7,00/mês</p>
                 <!-- Substitua 'seu_numerodetelefone' pelo seu número de telefone -->
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play">Comprar Agora</a>
             </div>
         </div>
 
@@ -262,7 +262,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
                 <!-- Substitua 'seu_numerodetelefone' pelo seu número de telefone -->
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Telecine">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Telecine">Comprar Agora</a>
             </div>
         </div>
 
@@ -274,7 +274,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <div class="button-container">
                 <p class="price">R$ 15,00/mês</p>
                 <!-- Substitua 'seu_numerodetelefone' pelo seu número de telefone -->
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Canais%20%2B%20Telecine">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20do%20Globo%20Play%20%2B%20Canais%20%2B%20Telecine">Comprar Agora</a>
             </div>
         </div>
 
@@ -285,7 +285,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos canais Sky+ "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Sky+">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Sky+">Comprar Agora</a>
             </div>
         </div>
 
@@ -296,7 +296,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos canais Sky e ao conteúdo exclusivo do Première "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 15,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Sky%20%2B%20Première">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Sky%20%2B%20Première">Comprar Agora</a>
             </div>
         </div>
 
@@ -307,7 +307,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos canais e conteúdos do Zapping "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 7,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Zapping">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Zapping">Comprar Agora</a>
             </div>
         </div>
 
@@ -318,7 +318,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso a conteúdos exclusivos da Brasileirinhas "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Brasileirinhas">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Brasileirinhas">Comprar Agora</a>
             </div>
         </div>
 
@@ -329,7 +329,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso a jogos exclusivos do Xbox Pass para PC ativação codigo.</p>
             <div class="button-container">
                 <p class="price">R$ 5,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Xbox%20Pass%20PC">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Xbox%20Pass%20PC">Comprar Agora</a>
             </div>
         </div>
 
@@ -340,7 +340,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso a conteúdos exclusivos da Apple TV "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 8,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Apple%20TV">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Apple%20TV">Comprar Agora</a>
             </div>
         </div>
 
@@ -351,7 +351,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Disney+, Star+ e ESPN Premium "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 15,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Disney%2B%20Star%2B%20ESPN%20Premium">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Disney%2B%20Star%2B%20ESPN%20Premium">Comprar Agora</a>
             </div>
         </div>
 
@@ -362,7 +362,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Prime Vídeo "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 8,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Prime%20Vídeo">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Prime%20Vídeo">Comprar Agora</a>
             </div>
         </div>
 
@@ -373,7 +373,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Prime Vídeo e Première "tv ativação codigo".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Prime%20Vídeo%20%2B%20Première">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Prime%20Vídeo%20%2B%20Première">Comprar Agora</a>
             </div>
         </div>
 
@@ -384,7 +384,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Max "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Max">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Max">Comprar Agora</a>
             </div>
         </div>
 
@@ -395,7 +395,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Uou Play e canais adicionais "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Uou%20Play%20%2B%20Canais">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Uou%20Play%20%2B%20Canais">Comprar Agora</a>
             </div>
         </div>
 
@@ -406,7 +406,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Mubi Filmes "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Mubi%20Filmes">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Mubi%20Filmes">Comprar Agora</a>
             </div>
         </div>
 
@@ -417,7 +417,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos da Paramount "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Paramount">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Paramount">Comprar Agora</a>
             </div>
         </div>
 
@@ -428,7 +428,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Crunchyroll "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 10,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Crunchyroll">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Crunchyroll">Comprar Agora</a>
             </div>
         </div>
 
@@ -439,7 +439,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso aos conteúdos exclusivos do Play Plus "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 5,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Play%20Plus">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Play%20Plus">Comprar Agora</a>
             </div>
         </div>
 
@@ -450,7 +450,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso ao conteúdo sem anúncios do YouTube Premium "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 3,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20YouTube%20Premium">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20YouTube%20Premium">Comprar Agora</a>
             </div>
         </div>
 
@@ -461,7 +461,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso ao conteúdo exclusivo do Spotify Premium "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 3,00/mês R$5,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Spotify">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Spotify">Comprar Agora</a>
             </div>
         </div>
 
@@ -472,7 +472,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso ao conteúdo exclusivo do Canva Pro "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 5,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Canva%20Pro">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Canva%20Pro">Comprar Agora</a>
             </div>
         </div>
 
@@ -483,7 +483,7 @@ comprando mais de 5 assinatura tem descontão.</p>
             <p>Acesso ao pacote completo do Microsoft Office 365 "conta".</p>
             <div class="button-container">
                 <p class="price">R$ 5,00/mês</p>
-                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Microsoft%20Office%20365">Compre Agora</a>
+                <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Microsoft%20Office%20365">Comprar Agora</a>
             </div>
         </div>
 
