--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
             background-color: #f7f7f7;
             color: #333;
             position: relative;
+            transition: background-color 0.3s, color 0.3s;
         }
+
+        body.dark-mode {
+            background-color: #333;
+            color: #f7f7f7;
+        }
+
         .container {
             max-width: 100%;
             padding: 20px;
@@ -22,35 +29,44 @@
             justify-content: center;
             align-items: center;
         }
+
         .subscription {
-            width: 200px; /* Largura fixa para todas as janelas */
-            height: 450px; /* Altura fixa para todas as janelas */
-            margin: 20px; /* Margem entre as janelas */
+            width: 200px;
+            height: 450px;
+            margin: 20px;
             padding: 20px;
             border-radius: 15px;
             background-color: #fff;
             text-align: center;
             overflow: hidden;
             position: relative;
-            /* Efeito de luz animado */
-            animation: lightEffect 5s linear infinite;
+            animation: lightEffect 5s linear infinite, borderGlow 2s infinite alternate;
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            transition: background-color 0.3s, color 0.3s;
         }
-        .subscription h2 {
-            color: #333;
-            margin-top: 10px;
+
+        body.dark-mode .subscription {
+            background-color: #444;
+            color: #f7f7f7;
         }
-        .subscription p {
-            color: #666;
+
+        .subscription h2, .subscription p {
+            color: inherit;
         }
+
         .subscription .price {
             font-size: 24px;
             font-weight: bold;
             color: #ff6600;
             margin-bottom: 10px;
         }
+
+        body.dark-mode .subscription .price {
+            color: #ff6600;
+        }
+
         .subscription .icon {
             width: 100px;
             height: 100px;
@@ -58,6 +74,7 @@
             display: block;
             border-radius: 50%;
         }
+
         .buy-button {
             background-color: #25c700;
             color: #fff;
@@ -68,10 +85,11 @@
             text-decoration: none;
             cursor: pointer;
             transition: background-color 0.3s ease-in-out;
-            width: 100%; /* Botão ocupa toda a largura */
+            width: 100%;
         }
+
         .buy-button:hover {
-            background-color: #25c700;
+            background-color: #1f8b27;
         }
 
         .scroll-message {
@@ -93,12 +111,25 @@
             50% { transform: translateY(-10px); }
         }
 
-        .chat-icon {
+        .chat-icon, .theme-toggle-icon {
             position: fixed;
             top: 80px;
             left: 20px;
             cursor: pointer;
             z-index: 1000;
+        }
+
+        .theme-toggle-icon {
+            top: 130px;
+        }
+
+        .chat-icon svg, .theme-toggle-icon svg {
+            fill: #333; /* Cor padrão dos ícones */
+            transition: fill 0.3s;
+        }
+
+        body.dark-mode .chat-icon svg, body.dark-mode .theme-toggle-icon svg {
+            fill: #f7f7f7; /* Cor dos ícones no modo escuro */
         }
 
         .modal {
@@ -121,21 +152,18 @@
             width: 300px;
             text-align: center;
             position: relative;
-            /* Adicionando o efeito de luz */
             box-shadow: 0 0 20px rgba(255, 165, 0, 0.5);
             animation: borderLightEffect 2s linear infinite;
+            color: #333;
+            transition: background-color 0.3s, color 0.3s;
+            border: 2px solid transparent; /* Adiciona a borda base */
+            border-image: linear-gradient(45deg, #ff6600, #ffcc00);
+            border-image-slice: 1; /* Cria um efeito de borda gradiente */
         }
 
-        @keyframes borderLightEffect {
-            0% {
-                box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5);
-            }
-            50% {
-                box-shadow: 0 0 20px rgba(255, 165, 0, 0.5), 0 0 40px rgba(255, 165, 0, 0.5);
-            }
-            100% {
-                box-shadow: 0 0 10px rgba(255, 165, 0, 0.5), 0 0 20px rgba(255, 165, 0, 0.5);
-            }
+        body.dark-mode .modal-content {
+            background-color: #555;
+            color: #f7f7f7;
         }
 
         .modal-content h2 {
@@ -157,20 +185,39 @@
             background-color: #ff6600;
         }
 
-        /* Estilos específicos para telas menores que 768px (dispositivos móveis) */
         @media only screen and (max-width: 768px) {
             .container {
                 padding: 10px;
             }
         }
 
-        /* Animação do efeito de luz */
         @keyframes lightEffect {
             0% {
                 box-shadow: 0 0 0 0 rgba(255, 204, 0, 0.5);
             }
             50% {
-                box-shadow: 0 0 20px 4px rgba(255, 102, 0, 0.5); /* Cor laranja */
+                box-shadow: 0 0 10px 7px rgba(255, 102, 0, 0.9);
+            }
+            100% {
+                box-shadow: 0 0 0 0 rgba(255, 204, 0, 0.5);
+            }
+        }
+
+        @keyframes borderGlow {
+            0% {
+                border-color: rgba(255, 165, 0, 0.5);
+            }
+            100% {
+                border-color: rgba(255, 165, 0, 1);
+            }
+        }
+
+        @keyframes borderLightEffect {
+            0% {
+                box-shadow: 0 0 0 0 rgba(255, 204, 0, 0.5);
+            }
+            50% {
+                box-shadow: 0 0 0px 0px rgba(255, 102, 0, 0.0);
             }
             100% {
                 box-shadow: 0 0 0 0 rgba(255, 204, 0, 0.5);
@@ -189,17 +236,24 @@
         </svg>
     </div>
 
+    <!-- Ícone de alternância de tema -->
+    <div class="theme-toggle-icon" onclick="toggleTheme()">
+        <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" fill="currentColor" class="bi bi-lightbulb-fill" viewBox="0 0 16 16">
+  <path d="M2 6a6 6 0 1 1 10.174 4.31c-.203.196-.359.4-.453.619l-.762 1.769A.5.5 0 0 1 10.5 13h-5a.5.5 0 0 1-.46-.302l-.761-1.77a2 2 0 0 0-.453-.618A5.98 5.98 0 0 1 2 6m3 8.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1l-.224.447a1 1 0 0 1-.894.553H6.618a1 1 0 0 1-.894-.553L5.5 15a.5.5 0 0 1-.5-.5"/>
+</svg>
+    </div>
+
     <!-- Modal -->
     <div class="modal" id="subscriptionModal">
         <div class="modal-content">
             <h2>AVISO</h2>
             <p>Procurando assinatura original? Precinho que cabe em seu bolso.<br><br>
-Temos tela, tv, conta, convite.<br><br>
-“Tela tv ativação via código apenas para tv não envio e-mail e nem senha”<br><br>
-“conta ideal para todos da família, amigo, colega, revender, etc. envio e-mail e senha”<br><br>
-“convite eu envio para o seu e-mail particular ou qualquer um que você tenha se não estiver envio um”<br><br>
+            Temos tela, tv, conta, convite.<br><br>
+            “Tela tv ativação via código apenas para tv não envio e-mail e nem senha”<br><br>
+            “conta ideal para todos da família, amigo, colega, revender, etc. envio e-mail e senha”<br><br>
+            “convite eu envio para o seu e-mail particular ou qualquer um que você tenha se não estiver envio um”<br><br>
 
-comprando mais de 5 assinatura tem descontão.</p>
+            Comprando mais de 5 assinatura tem descontão.</p>
             <button class="close-button" onclick="closeModal()">Fechar</button>
         </div>
     </div>
@@ -289,16 +343,66 @@ comprando mais de 5 assinatura tem descontão.</p>
             </div>
         </div>
 
-        <!-- Assinatura Sky + Première -->
+        <!-- Assinatura Sky + Première + Espn -->
         <div class="subscription">
-            <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + Première">
-            <h2>Sky + Première</h2>
+            <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + Première + Espn">
+            <h2>Sky + Première + Espn</h2>
             <p>Acesso aos canais Sky e ao conteúdo exclusivo do Première "conta".</p>
             <div class="button-container">
-                <p class="price">R$ 15,00/mês</p>
+                <p class="price">R$ 18,00/mês</p>
                 <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1?text=Quero%20comprar%20a%20assinatura%20Sky%20%2B%20Première">Comprar Agora</a>
             </div>
         </div>
+
+<div class="subscription">
+    <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + Telecine">
+    <h2>Sky + Telecine</h2>
+    <p>Acesso aos canais Sky e ao conteúdo exclusivo do Telecine.</p>
+    <div class="button-container">
+        <p class="price">R$ 15,00/mês</p>
+        <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1">Comprar Agora</a>
+    </div>
+</div>
+
+<div class="subscription">
+    <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + Max">
+    <h2>Sky + Max</h2>
+    <p>Acesso aos canais Sky e ao conteúdo exclusivo do Max.</p>
+    <div class="button-container">
+        <p class="price">R$ 15,00/mês</p>
+        <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1">Comprar Agora</a>
+    </div>
+</div>
+
+<div class="subscription">
+    <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + Combate">
+    <h2>Sky + Combate</h2>
+    <p>Acesso aos canais Sky e ao conteúdo exclusivo do Combate.</p>
+    <div class="button-container">
+        <p class="price">R$ 15,00/mês</p>
+        <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1">Comprar Agora</a>
+    </div>
+</div>
+
+<div class="subscription">
+    <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + UFC Passe">
+    <h2>Sky + UFC Passe</h2>
+    <p>Acesso aos canais Sky e ao conteúdo exclusivo do UFC Passe.</p>
+    <div class="button-container">
+        <p class="price">R$ 15,00/mês</p>
+        <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1">Comprar Agora</a>
+    </div>
+</div>
+
+<div class="subscription">
+    <img class="icon" src="https://s10.gifyu.com/images/StwO2.webp" alt="Sky + Paramount">
+    <h2>Sky + Paramount</h2>
+    <p>Acesso aos canais Sky e ao conteúdo exclusivo do Paramount.</p>
+    <div class="button-container">
+        <p class="price">R$ 15,00/mês</p>
+        <a class="buy-button" href="https://wa.me/message/GPIYPTNUMB55H1">Comprar Agora</a>
+    </div>
+</div>
 
         <!-- Assinatura Zapping -->
         <div class="subscription">
@@ -488,16 +592,22 @@ comprando mais de 5 assinatura tem descontão.</p>
         </div>
 
     </div>
+        </div>
+    </div>
 
     <script>
         function openModal() {
             var modal = document.getElementById('subscriptionModal');
-            modal.style.display = 'flex'; // Mostra o modal alterando o estilo display para 'flex'
+            modal.style.display = 'flex';
         }
 
         function closeModal() {
             var modal = document.getElementById('subscriptionModal');
-            modal.style.display = 'none'; // Oculta o modal alterando o estilo display para 'none'
+            modal.style.display = 'none';
+        }
+
+        function toggleTheme() {
+            document.body.classList.toggle('dark-mode');
         }
     </script>
 </body>
