--- a/index.html
+++ b/index.html
@@ -404,6 +404,17 @@
     </div>
 </div>
 
+<!-- Assinatura IPTV Unitv -->
+<div class="subscription">
+    <img class="icon" src="https://s12.gifyu.com/images/S5RvH.jpg" alt="IPTV Unitv">
+    <h2>IPTV Unitv</h2>
+    <p>Acesso a uma vasta gama de canais fechado e conteúdos.</p>
+    <div class="button-container">
+        <p class="price">R$ 15,00/mês</p>
+        <a class="buy-button" href="https://wa.me/message/SEUCODIGODECONTATO?text=Quero%20comprar%20a%20assinatura%20IPTV%20Unitv">Comprar Agora</a>
+    </div>
+</div>
+
         <!-- Assinatura Zapping -->
         <div class="subscription">
             <img class="icon" src="https://s10.gifyu.com/images/StwOL.webp" alt="Zapping">
